bindata/assets/kueue-operator/networkpolicy/10-allow-ingress-egress-metrics.yaml
# allow ingress and egress traffic to/from metrics endpoint
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kueue-allow-ingress-egress-metrics
  namespace: openshift-kueue-operator
spec:
  podSelector:
    matchLabels:
      app.openshift.io/name: kueue # applies to both the operator and kueue pod
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          openshift.io/cluster-monitoring: "true"
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - protocol: TCP
      port: 8443
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          openshift.io/cluster-monitoring: "true"
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - protocol: TCP
      port: 8443
  policyTypes:
  - Ingress
  - Egress
