bindata/assets/kueue-operator/networkpolicy/allow-egress-api.yaml
# allow outbound traffic to kube-apiserver
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kueue-allow-egress-kube-apiserver
  namespace: openshift-kueue-operator
spec:
  podSelector:
    matchLabels:
      app.openshift.io/name: kueue # applies to both the operator and kueue pod
  egress:
  - ports:
    - protocol: TCP
      port: 6443  # we can not use a name because it is not on the pod network
  policyTypes:
  - Egress
