bindata/assets/kueue-operator/networkpolicy/deny-all.yaml
# it's the default deny-all policy, applies to both ingress and egress traffic
# it matches the kueue pod running in the shared operator namespace.

# TODO: ideally kueue operator should reside in an isolated (not shared with
# other operators) namespace where the operator has full control of the
# namespace, this enables the operator to select all pod(s) in the namespace
# to enforce a namespace-wide deny all policy.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kueue-deny-all
  namespace: openshift-kueue-operator
spec:
  podSelector:
    matchLabels:
      app.openshift.io/name: kueue # applies to both the operator and kueue pod
  policyTypes:
  - Ingress
  - Egress
